# SPlayer-honglianK

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  Dockerfile  FEATURES_ENABLED.md  README.md  auto-eslint.mjs  auto-imports.d.ts  components.d.ts  electron-builder.config.ts  electron.vite.config.ts  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  tsconfig.web.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: dev.yml  docs.yml  issue-helper.yml  nightly.yml  release.yml
docs/: api.md  contributing.md  guide.md  native.md  socket.md  streaming.md
docs/.vitepress/: config.ts
docs/.vitepress/components/: DownloadPage.vue
docs/troubleshooting/: debug.md
electron/main/: index.ts
electron/main/database/: CacheDB.ts  LocalMusicDB.ts
electron/main/ipc/: index.ts  ipc-cache.ts  ipc-file.ts  ipc-lyric.ts  ipc-mac-statusbar.ts  ipc-media.ts  ipc-mpv.ts  ipc-protocol.ts  ipc-renderer-log.ts  ipc-store.ts  ipc-system.ts  ipc-taskbar.ts  ipc-tray.ts  ipc-update.ts  ipc-window.ts
electron/main/services/: CacheService.ts  DownloadService.ts  ExternalLyricService.ts  LocalMusicService.ts  MpvService.ts  MusicCacheService.ts  MusicMetadataService.ts  SocketService.ts
electron/main/store/: index.ts
electron/main/thumbar/: index.ts
electron/main/tray/: index.ts
electron/main/update/: index.ts
electron/main/utils/: format.ts  helper.ts  native-loader.ts  track-info.ts
electron/main/windows/: index.ts  login-window.ts  lyric-window.ts  main-window.ts  taskbar-lyric-window.ts
electron/preload/: index.d.ts  index.ts
electron/server/: index.ts
electron/server/control/: index.ts
electron/server/netease/: index.ts
electron/server/qqmusic/: index.ts
native/external-media-integration/: Cargo.toml  index.d.ts  package.json
native/external-media-integration/src/: discord.rs  lib.rs  logger.rs  model.rs
native/external-media-integration/src/sys_media/: linux.rs  macos.rs  mod.rs  windows.rs
native/ferrous-opencc-wasm/: Cargo.toml  package.json
native/ferrous-opencc-wasm/pkg/: ferrous_opencc_wasm.d.ts  ferrous_opencc_wasm.js  ferrous_opencc_wasm_bg.wasm  ferrous_opencc_wasm_bg.wasm.d.ts  package.json
native/ferrous-opencc-wasm/src/: lib.rs
native/taskbar-lyric/: Cargo.toml  index.d.ts  package.json
native/taskbar-lyric/src/: lib.rs  logger.rs  tray_watcher.rs  uia.rs  uia_watcher.rs  utils.rs
native/taskbar-lyric/src/strategy/: mod.rs  win10.rs  win11.rs
native/tools/: Cargo.toml  index.d.ts  package.json
native/tools/src/: download.rs  lib.rs  scanner.rs
public/wasm/: ffmpeg.wasm
scripts/: build-native.ts  dev.ts  enable-all-features.ts
src/: App.vue  main.ts
src/api/: cloud.ts  comment.ts  lastfm.ts  playlist.ts  song.ts
src/api/streaming/: emby.ts  index.ts  jellyfin.ts  subsonic.ts
src/assets/data/: exclude.ts  lyricConfig.ts  themeColor.json
src/components/AMLL/: BackgroundRender.vue  LyricPlayer.vue
src/components/Card/: SongCard.vue  SongDataCard.vue  SongListCard.vue
src/components/Global/: PlayerProvider.vue  Provider.vue  TextContainer.vue
src/components/Layout/: Logo.vue  Menu.vue  Nav.vue  Sider.vue  User.vue
src/components/List/: ArtistList.vue  CommentList.vue  CoverList.vue  ListComment.vue  ListDetail.vue  SongList.vue  SongPlayList.vue
src/components/Menu/: CoverMenu.vue  MobileSongMenu.vue  SongListMenu.vue
src/composables/: useCustomCode.ts  useInit.ts  useMobile.ts  useQualityControl.ts  useSongMenu.ts  useTimeFormat.ts
src/core/player/: PlayerIpc.ts  (+6 more)
src/layout/: AppLayout.vue
src/router/: index.ts  routes.ts
src/stores/: data.ts  index.ts  local.ts  music.ts  setting.ts  shortcut.ts  status.ts  streaming.ts
src/style/: animate.scss  main.scss
src/types/: color.d.ts  desktop-lyric.d.ts  global.d.ts  lyric.d.ts  main.ts  settings.ts  streaming.ts
src/utils/: TypedEventTarget.ts  assGenerator.ts  auth.ts  calc.ts  color.ts  env.ts  error.ts  format.ts  helper.ts  initIpc.ts  instruction.ts  log.ts  meta.ts  modal.ts  opencc.ts  request.ts  rules.ts  style.ts  time.ts  version.ts
src/views/: Cloud.vue  Video.vue
web/loading/: index.html
(+144 files in other folders)
