[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "rt-multi-thread",
  "sync",
  "macros",
] }
futures-util = "0.3"
bytes = "1"
dashmap = "6"
tokio-util = "0.7"
once_cell = "1"
anyhow = "1.0"
napi = { version = "3.8", features = ["napi9", "tokio_rt"] }
napi-derive = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# 音频扫描相关
jwalk = "0.8"
lofty = "0.22"
rayon = "1.11"
md5 = "0.8.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
image = "0.25.9"
crossbeam-channel = "0.5.15"
reqwest = { version = "0.13.1", features = ["stream", "rustls-native-certs"] }

[build-dependencies]
napi-build = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

# Clippy Lints
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_precision_loss = "allow"
cast_possible_truncation = "allow"
must_use_candidate = "allow"
